[package]
name = "rust-cache-warmer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
anyhow = "1.0"
futures = "0.3"
num_cpus = "1.16"

[profile.release]
debug = true
