[package]
name = "rust-cache-warmer"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.16"
pprof = { version = "0.13", features = ["flamegraph"] }
log = "0.4"
env_logger = "0.10"
nix = { version = "0.28", features = ["fs", "mman"] }

# For profiling builds, which require debug symbols.
# Build with `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = true
